fix(UI): incorrect color in high contrast theme [YTFRONT-4818]

--- a/packages/ui/src/ui/pages/query-tracker/QueriesList/QueriesTutorialList/index.scss
+++ b/packages/ui/src/ui/pages/query-tracker/QueriesList/QueriesTutorialList/index.scss
@@ -21,7 +21,6 @@
         position: sticky;
         top: 0;
         z-index: 1;
-        background: var(--main-background);
     }
 }
 
