--- a/packages/ui/src/ui/pages/scheduling/Content/tabs/Overview/Overview.scss
+++ b/packages/ui/src/ui/pages/scheduling/Content/tabs/Overview/Overview.scss
@@ -11,7 +11,6 @@
         padding: 10px 0;
 
         z-index: var(--fixed-toolbar-z-index);
-        background-color: var(--main-background);
 
         &_sticky {
             @include sticky-style();
